--- a/templates/configmaps/app.yaml
+++ b/templates/configmaps/app.yaml
@@ -32,3 +32,4 @@ data:
   DOCUMENT_SERVER_URL_INTERNAL: {{ .Values.connections.documentServerUrlInternal | quote }}
   APP_KNOWN_PROXIES: {{ .Values.connections.appKnownProxies | quote }}
   APP_KNOWN_NETWORKS: {{ .Values.connections.appKnownNetworks | quote }}
+  INSTALLATION_TYPE: {{ .Values.connections.installationType | quote }}
