--- a/templates/services/socket.yaml
+++ b/templates/services/socket.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: socket
+  name: onlyoffice-socket
   namespace: {{ include "app.namespace" . | quote }}
   labels:
-    app: socket
+    app: onlyoffice-socket
     {{- if .Values.commonLabels }}
     {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
