--- a/values.yaml
+++ b/values.yaml
@@ -91,7 +91,7 @@ connections:
   # connections.studioNotifyHost The name of the DocSpace Studio Notify service
   studioNotifyHost: studio-notify
   # connections.socketHost The name of the DocSpace Socket service
-  socketHost: onlyoffice-socket
+  socketHost: socket
   # connections.peopleServerHost The name of the DocSpace People Server service
   peopleServerHost: people-server
   # connections.filesHost The name of the DocSpace Files service
@@ -1072,8 +1072,8 @@ api:
       memory: "256Mi"
       cpu: "100m"
     limits:
-      memory: "2Gi"
-      cpu: "2000m"
+      memory: "4Gi"
+      cpu: "4000m"
 
 # DocSpace Backup StatefulSet parameters
 #
