--- a/templates/secrets/mysql.yaml
+++ b/templates/secrets/mysql.yaml
@@ -8,6 +8,9 @@ metadata:
   labels:
     {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
   {{- end }}
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "1"
 type: Opaque
 stringData:
   {{ .Values.connections.mysqlSecretKeyPassword }}: {{ include "app.mysql.password" . | quote }}
