Update the installation with the latest edits (#81)
* Update the installation with the latest edits

* Add missing variables

* Fix connection to socket

* Fix elasticsearch and socket installation

* Automate the installation of elasticsearch

* Fix class definition for ingress

--- a/templates/configmaps/app.yaml
+++ b/templates/configmaps/app.yaml
@@ -32,3 +32,5 @@ data:
   DOCUMENT_SERVER_URL_INTERNAL: {{ .Values.connections.documentServerUrlInternal | quote }}
   APP_KNOWN_PROXIES: {{ .Values.connections.appKnownProxies | quote }}
   APP_KNOWN_NETWORKS: {{ .Values.connections.appKnownNetworks | quote }}
+  INSTALLATION_TYPE: {{ .Values.connections.installationType | quote }}
+  SOCKET_HOST: {{ .Values.connections.socketHost }}
