--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -29,5 +29,4 @@ jobs:
                --set ingress.enabled=true \
                --set install.job.enabled=true \
                --set elasticsearch.enabled=true \
-               --set serviceAccount.create=true \
-               --set apiSystem.enabled=true"
+               --set serviceAccount.create=true"
