--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -29,4 +29,6 @@ jobs:
                --set ingress.enabled=true \
                --set install.job.enabled=true \
                --set elasticsearch.enabled=true \
-               --set serviceAccount.create=true"
+               --set serviceAccount.create=true \
+               --set connections.brokerUser=guest \
+               --set connections.brokerPassword=guest"
