--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -29,7 +29,7 @@ jobs:
     name: "k8s manifests api validation"
     uses: ONLYOFFICE/ga-common/.github/workflows/deprecated-recources.yaml@master
     with:
-      manual_k8s: 1.27.4
+      manual_k8s: v1.27.4
       set_keys: |
               "--set serviceAccount.create=true \
                --set healthchecks.enabled=true \
