--- a/templates/services/healthchecks.yaml
+++ b/templates/services/healthchecks.yaml
@@ -14,4 +14,7 @@ spec:
     targetPort: {{ .Values.healthchecks.containerPorts.healthcheck }}
   selector:
     app: healthchecks
+    {{- if .Values.commonLabels }}
+    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+    {{- end }}
   type: ClusterIP
