--- a/templates/services/proxy.yaml
+++ b/templates/services/proxy.yaml
@@ -21,6 +21,9 @@ spec:
     targetPort: {{ .Values.proxy.containerPorts.external }}
   selector:
     app: proxy
+    {{- if .Values.commonLabels }}
+    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+    {{- end }}
   type: {{ .Values.proxy.service.type }}
   {{- if .Values.proxy.service.sessionAffinity }}
   sessionAffinity: {{ .Values.proxy.service.sessionAffinity }}
