--- a/values.yaml
+++ b/values.yaml
@@ -133,6 +133,8 @@ connections:
   appKnownProxies: ""
   # connections.appKnownNetworks List of intermediate proxy addresses
   appKnownNetworks: ""
+  # connections.oauthRedirectURL
+  oauthRedirectURL: "https://service.example.com/oauth2.aspx"
 # namespaceOverride The name of the namespace in which DocSpace will be deployed
 # If not set, the name will be taken from .Release.Namespace
 namespaceOverride: ""
@@ -213,6 +215,11 @@ extraConf:
   # May contain multiple values
   fileName:
     - appsettings.test.json
+# log.level Defines the type and severity of a logged event
+log:
+  level: "Warning"
+# debugInfo
+debugInfo: "false"
 # DocSpace Init Containers parameters
 initContainers:
   # Parameters of the Wait Storage initContainers
