Fix the path for the license in the local docs

--- a/templates/statefulset/document-server.yaml
+++ b/templates/statefulset/document-server.yaml
@@ -108,7 +108,7 @@ spec:
             name: jwt
         volumeMounts:
         - name: app-data
-          mountPath: /app/onlyoffice/data
+          mountPath: /var/www/onlyoffice/Data
       volumes:
       - name: app-data
         persistentVolumeClaim:
