Add the ability to specify an existing jwt secret

--- a/templates/secrets/jwt.yaml
+++ b/templates/secrets/jwt.yaml
@@ -1,3 +1,4 @@
+{{- if eq (include "docspace.jwt.createSecret" .) "true" }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -17,3 +18,4 @@ stringData:
   JWT_IN_BODY: {{ .Values.jwt.inBody | quote }}
   {{- end }}
   {{- end }}
+{{- end }}
