--- a/values.yaml
+++ b/values.yaml
@@ -206,6 +206,9 @@ jwt:
   header: "AuthorizationJwt"
   # jwt.inBody Specifies the enabling the token validation in the request body to the DocSpace
   inBody: false
+  ## jwt.existingSecret The name of an existing secret containing variables for jwt
+  ## If not specified, a secret named `jwt` will be created
+  existingSecret: ""
 # Configs for overriding default values and additional configuration files for DocSpace
 extraConf:
   # extraConf.secretName The name of the Secret containing the json files that override the default values and additional configuration files
