Fix parameter handling for ds

--- a/templates/configmaps/proxy-init-scripts.yaml
+++ b/templates/configmaps/proxy-init-scripts.yaml
@@ -30,6 +30,8 @@ data:
     sed -i 's/http\:\/\/$document_server/https\:\/\/{{ trimPrefix "https://" .Values.connections.documentServerHost }}/g' /etc/nginx/conf.d/onlyoffice.conf
     {{- else if contains "http://" .Values.connections.documentServerHost }}
     sed -i 's/$document_server/{{ trimPrefix "http://" .Values.connections.documentServerHost }}/g' /etc/nginx/conf.d/onlyoffice.conf
+    {{- else if empty .Values.connections.documentServerHost }}
+    {{- fail "You specified an empty value in the Document Server Host parameter!" }}
     {{- else }}
     sed -i 's/$document_server/{{ .Values.connections.documentServerHost }}/g' /etc/nginx/conf.d/onlyoffice.conf
     {{- end }}
