Fix proxy error when connecting an external docs (#87)
* Fix proxy error when connecting an external docs

* Fix parameter handling for ds

--- a/templates/services/document-server.yaml
+++ b/templates/services/document-server.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.docs.enabled }}
+{{- if eq .Values.connections.documentServerHost "document-server" }}
 apiVersion: v1
 kind: Service
 metadata:
