--- a/templates/deployments/people-server.yaml
+++ b/templates/deployments/people-server.yaml
@@ -143,6 +143,8 @@ spec:
         - configMapRef:
             name: app-all
         - secretRef:
+            name: {{ template "docspace.coreMachineKey.secretName" . }}
+        - secretRef:
             name: {{ template "docspace.jwt.secretName" . }}
         volumeMounts:
         {{- if .Values.extraConf.secretName }}
