--- a/templates/secrets/jwt.yaml
+++ b/templates/secrets/jwt.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: jwt
+  name: {{ .Release.Name }}-jwt
   namespace: {{ include "app.namespace" . | quote }}
   {{- if .Values.commonLabels }}
   labels:
